using a different demo Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@12 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
         <include name="**/*.class"/>
       </fileset>
       <manifest>
-        <attribute name="Main-Class" value="com.odellengineeringltd.glazedlists.demo.Demo"/>
+        <attribute name="Main-Class" value="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser"/>
         <attribute name="Sealed" value="true"/>
       </manifest>
     </jar>
