Added support for add(), remove(), set() etc. via the new WritableMutationList class. This support only works for lists that have a 1:1 mapping between the source list and the mutated list.
To complete support, two additional classes must be created:
 * DeltaList, a list where the changes always appear to have occured where
   they were placed
 * ReadOnlyList, a list that throws an exception whenever a write is requested.

Issue number:  18
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@85 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -34,22 +34,20 @@
   </target>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     JAVADOC & JAVA2HTML
-     Java2HTML is a free tool for putting Java code in a code-coloured, pretty
-     printed form. See http://www.java2html.com/
+     JAVADOC
+     Construct a browsable API.
    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     
   <target name="docs" depends="init"
     description="Scan the source code to generate the API">
     <mkdir dir="docs"/>
     <!-- document all the source with @todo tags -->
-    <javadoc packagenames="com.*" 
+    <javadoc packagenames="com.odellengineeringltd.glazedlists.*" 
       sourcepath="source" destdir="docs/api"
-      author="true" use="true" windowtitle="Glazed Lists">
+      author="true" use="true" windowtitle="Glazed Lists" source="1.4">
       <doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
-      <bottom><![CDATA[<i>Copyright &#169; 2003 O'Dell Engineering.</i>]]></bottom>
-      <tag name="todo" description="To do:"/>
-      <tag name="comment" description="Implementation Notes:"/> 
+      <bottom><![CDATA[<i>Copyright &#169; 2003-2004 O'Dell Engineering.</i>]]></bottom>
+      <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
     </javadoc>
   </target>
 
