Fixed the build file to not include inner classes from test files in the JAR Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@90 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -64,6 +64,7 @@
     <jar destfile="glazedlists.jar" update="true">
       <fileset dir="classes">
         <exclude name="**/**Test.class"/>
+        <exclude name="**/**Test$*.class"/>
       </fileset>
       <manifest>
         <attribute name="Main-Class" value="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser"/>
@@ -98,7 +99,7 @@
        basedir="."
        excludes="classes/**, docs/api/**, glazedlists-source.zip"/>
   </target>
-  
+
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
      TEST
