the new table sorter rules
it supports multi-sorting
it supports icons
it is predictable
it rules

Issue number:  31
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@127 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -66,6 +66,9 @@
         <exclude name="**/**Test.class"/>
         <exclude name="**/**Test$*.class"/>
       </fileset>
+      <fileset dir=".">
+        <include name="resources/**"/>
+      </fileset>
       <manifest>
         <attribute name="Main-Class" value="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser"/>
         <attribute name="Sealed" value="true"/>
