--- a/build.xml
+++ b/build.xml
@@ -43,12 +43,19 @@
   <target name="docs" depends="init"
     description="Scan the source code to generate the Javadoc API.">
     <mkdir dir="docs"/>
+    <tstamp prefix="javadoc">
+      <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
+    </tstamp>
     <!-- document all the source with @todo tags -->
-    <javadoc packagenames="com.odellengineeringltd.glazedlists.*" 
+    <javadoc
       sourcepath="source" destdir="docs/api"
       author="true" use="true" windowtitle="Glazed Lists" source="1.4">
-      <doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
-      <bottom><![CDATA[<i>Copyright &#169; 2003-2004 O'Dell Engineering.</i>]]></bottom>
+      <packageset dir="source">
+        <exclude name="**/glazedtasks/**"/>
+        <exclude name="**/test/**"/>
+      </packageset>
+      <doctitle><![CDATA[<h1><a href="http://glazedlists.dev.java.net">Glazed Lists</a></h1>]]></doctitle>
+      <bottom><![CDATA[Generated ${javadoc.datestamp}<br><i>Copyright &#169; 2003-2004 O'Dell Engineering.</i>]]></bottom>
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
     </javadoc>
   </target>
