moved iterator for the last time, renamed *Field* methods in TableFormat to *Column* methods
Issue number:  20
Obtained from:
Submitted by:
Reviewed by:


git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@194 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -51,6 +51,8 @@
       sourcepath="source" destdir="docs/api"
       author="true" use="true" windowtitle="Glazed Lists" source="1.4">
       <packageset dir="source">
+        <exclude name="**/impl/**"/>
+        <exclude name="**/demo/**"/>
         <exclude name="**/glazedtasks/**"/>
         <exclude name="**/test/**"/>
       </packageset>
