moved from com.odellengineeringltd.glazedlists to ca.odell.glazedlists Issue number: 20 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@199 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -79,7 +79,7 @@
         <include name="resources/**"/>
       </fileset>
       <manifest>
-        <attribute name="Main-Class" value="com.odellengineeringltd.glazedlists.demo.ProgrammingLanguageBrowser"/>
+        <attribute name="Main-Class" value="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser"/>
         <attribute name="Sealed" value="true"/>
       </manifest>
     </jar>
