fixed release notes Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@207 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -55,6 +55,7 @@
         <exclude name="**/demo/**"/>
         <exclude name="**/glazedtasks/**"/>
         <exclude name="**/test/**"/>
+        <exclude name="**/migrationkit/**"/>
       </packageset>
       <doctitle><![CDATA[<h1><a href="http://glazedlists.dev.java.net">Glazed Lists</a></h1>]]></doctitle>
       <bottom><![CDATA[Generated ${javadoc.datestamp}<br><i>Copyright &#169; 2003-2004 O'Dell Engineering.</i>]]></bottom>
