--- a/build.xml
+++ b/build.xml
@@ -80,7 +80,7 @@
         <include name="resources/**"/>
       </fileset>
       <manifest>
-        <attribute name="Main-Class" value="ca.odell.glazedlists.demo.ProgrammingLanguageBrowser"/>
+        <attribute name="Main-Class" value="ca.odell.glazedlists.demo.IssuesBrowser"/>
         <attribute name="Sealed" value="true"/>
       </manifest>
     </jar>
