--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,7 @@
         <exclude name="**/test/**"/>
         <exclude name="**/migrationkit/**"/>
         <exclude name="**/swt/**"/>
+        <exclude name="**/net/**"/>
       </packageset>
       <doctitle><![CDATA[<h1><a href="http://glazedlists.dev.java.net">Glazed Lists</a></h1>]]></doctitle>
       <bottom><![CDATA[Generated ${javadoc.datestamp}<br><i>Copyright &#169; 2003-2004 O'Dell Engineering.</i>]]></bottom>
