revised Javadoc for a handful of classes
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@374 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -48,8 +48,7 @@
     </tstamp>
     <!-- document all the source -->
     <javadoc
-      sourcepath="source" destdir="docs/api"
-      author="true" use="true" windowtitle="Glazed Lists" source="1.4">
+      destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
       <packageset dir="source">
         <exclude name="**/impl/**"/>
         <exclude name="**/demo/**"/>
