Moved ListSelectionModel directly into EventSelectionModel Issue number: 108 Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@472 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,7 @@
         description="Compile the source.">
     <mkdir dir="classes"/>
     <!-- Compile the java code from source/ into classes/ -->
-    <javac destdir="classes" srcdir="source" debug="on" source="1.4">
+    <javac destdir="classes" srcdir="source" debug="on" source="1.4" deprecation="on">
       <exclude name="**/swt/**"/>
     </javac>
   </target>
