Added impldocs target
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@511 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
     <delete dir="classes"/>
     <!-- Delete the documentation directories -->
     <delete dir="docs/api"/>
+    <delete dir="docs/impl"/>
     <!-- Delete temporary files from JEdit -->
     <delete>
       <fileset dir="${basedir}" defaultexcludes="no">
