--- a/build.xml
+++ b/build.xml
@@ -52,9 +52,7 @@
       destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
       <packageset dir="source">
         <exclude name="**/impl/**"/>
-        <exclude name="**/net/**"/>
         <exclude name="**/demo/**"/>
-        <exclude name="**/swt/**"/>
       </packageset>
       <doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
       <bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
@@ -75,7 +73,7 @@
     </tstamp>
     <!-- document all the source -->
     <javadoc
-      destdir="docs/dev" access="package" author="true" use="true" windowtitle="Glazed Lists - Internal" source="1.4">
+      destdir="docs/impldocs" access="protected" author="true" use="true" windowtitle="Glazed Lists - Internal" source="1.4">
       <packageset dir="source"/>
       <packageset dir="test"/>
       <doctitle><![CDATA[<h1>Glazed Lists - Developer Docs</h1>]]></doctitle>
