linked SWT API from build
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@552 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,7 @@
       <doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
       <bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+      <link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
     </javadoc>
   </target>
 
@@ -79,6 +80,7 @@
       <doctitle><![CDATA[<h1>Glazed Lists - Developer Docs</h1>]]></doctitle>
       <bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
       <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+      <link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
     </javadoc>
   </target>
 
