Initial draft of the persistent map, which may be used to implement FileList
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@632 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -186,4 +186,22 @@
     <fail message="Tests failed. Check test output." if="test.failed"/>
   </target>
 
+
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+     PMD
+     Programming Mistake Detector, available free at http://pmd.sourceforge.net/
+   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+   
+  <target name="pmd">
+    <mkdir dir="docs"/>
+    <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"/>
+    <pmd rulesetfiles="rulesets/strictexception.xml,rulesets/basic.xml,rulesets/design.xml,rulesets/imports.xml,rulesets/unusedcode.xml">
+      <formatter type="html" toFile="docs/pmd.html"/>
+        <fileset dir="source/">
+          <include name="**/*.java"/>
+      </fileset>
+    </pmd>
+  </target>
+
+  
 </project>
