Now with a nearly-complete PersistentMap
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@635 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -177,6 +177,7 @@
     <!-- Execute JUnit tests -->
     <junit printsummary="true" showoutput="false" fork="true"
       errorProperty="test.failed" failureProperty="test.failed">
+      <assertions><enable/></assertions>
       <classpath path="classes:${ant.home}/lib/junit.jar"/>
       <formatter type="brief" usefile="false"/>
       <batchtest>
