--- a/build.xml
+++ b/build.xml
@@ -8,201 +8,203 @@
 <project name="glazedlists" default="jar" basedir=".">
 
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     BUILD ADMINISTRATION
-     Create build directories and set up necessary paths.
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   BUILD ADMINISTRATION
+	   Create build directories and set up necessary paths.
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-  <target name="init">
-  </target>
+	<target name="init">
+	</target>
 
-  <target name="clean"
-    description="Clean up generated files, forcing them to be rebuilt.">
-    <!-- Delete the directories where generated files fall -->
-    <delete dir="classes"/>
-    <!-- Delete the documentation directories -->
-    <delete dir="docs/api"/>
-    <delete dir="docs/impl"/>
-    <!-- Delete temporary files from JEdit -->
-    <delete>
-      <fileset dir="${basedir}" defaultexcludes="no">
-        <include name="**/*~"/>
-      </fileset>
-    </delete>
-    <!-- Delete the generated .jar -->
-    <delete file="glazedlists.jar"/>
-    <!-- Delete the generated source -->
-    <delete file="glazedlists-source.zip"/>        
-  </target>
-
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     JAVADOC
-     Construct a browsable API.
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    
-  <target name="docs" depends="init"
-    description="Scan the source code to generate the Javadoc API.">
-    <mkdir dir="docs"/>
-    <tstamp prefix="javadoc">
-      <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
-    </tstamp>
-    <!-- document all the source -->
-    <javadoc
-      destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
-      <packageset dir="source">
-        <exclude name="**/impl/**"/>
-        <exclude name="**/demo/**"/>
-      </packageset>
-      <doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
-      <bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
-      <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
-      <link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
-    </javadoc>
-  </target>
+	<target name="clean"
+		description="Clean up generated files, forcing them to be rebuilt.">
+		<!-- Delete the directories where generated files fall -->
+		<delete dir="classes"/>
+		<!-- Delete the documentation directories -->
+		<delete dir="docs/api"/>
+		<delete dir="docs/impl"/>
+		<!-- Delete temporary files from JEdit -->
+		<delete>
+			<fileset dir="${basedir}" defaultexcludes="no">
+				<include name="**/*~"/>
+			</fileset>
+		</delete>
+		<!-- Delete the generated .jar -->
+		<delete file="glazedlists.jar"/>
+		<!-- Delete the generated source -->
+		<delete file="glazedlists-source.zip"/>
+	</target>
 
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     DEVELOPER JAVADOC
-     Generate the Javadoc API for internal implementation classes.
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-    
-  <target name="impldocs" depends="init">
-    <mkdir dir="docs"/>
-    <tstamp prefix="javadoc">
-      <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
-    </tstamp>
-    <!-- document all the source -->
-    <javadoc
-      destdir="docs/impldocs" access="protected" author="true" use="true" windowtitle="Glazed Lists - Internal" source="1.4">
-      <packageset dir="source"/>
-      <packageset dir="test"/>
-      <doctitle><![CDATA[<h1>Glazed Lists - Developer Docs</h1>]]></doctitle>
-      <bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
-      <link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
-      <link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
-    </javadoc>
-  </target>
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   JAVADOC
+	   Construct a browsable API.
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-  
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     JAR
-     Construct the .jar file for use in a library.
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <target name="jar" depends="init,compile"
-        description="Creates glazedlists.jar file containing all UI libraries.">
-    <tstamp prefix="jar">
-      <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
-    </tstamp>
-    <jar destfile="glazedlists.jar" update="true" index="true">
-      <fileset dir="classes"/>
-      <fileset dir=".">
-        <include name="resources/**"/>
-      </fileset>
-      <manifest>
-        <attribute name="Main-Class" value="ca.odell.glazedlists.demo.IssuesBrowser"/>
-        <attribute name="Sealed" value="true"/>
-        <attribute name="Built-By" value="${user.name}"/>
-        <attribute name="Implementation-Version" value="${jar.datestamp}"/>
-        <attribute name="Implementation-Title" value="Glazed Lists"/>
-        <attribute name="Implementation-URL" value="http://publicobject.com/glazedlists/"/>
-      </manifest>
-    </jar>
-  </target>
+	<target name="docs" depends="init"
+		description="Scan the source code to generate the Javadoc API.">
+		<mkdir dir="docs"/>
+		<tstamp prefix="javadoc">
+			<format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
+		</tstamp>
+		<!-- document all the source -->
+		<javadoc
+			destdir="docs/api" author="true" use="true" windowtitle="Glazed Lists" source="1.4">
+			<packageset dir="source">
+				<exclude name="**/impl/**"/>
+				<exclude name="**/demo/**"/>
+			</packageset>
+			<doctitle><![CDATA[<h1>Glazed Lists</h1>]]></doctitle>
+			<bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
+			<link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+			<link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
+		</javadoc>
+	</target>
 
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     COMPILE
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   DEVELOPER JAVADOC
+	   Generate the Javadoc API for internal implementation classes.
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-  <target name="compile" depends="init"
-        description="Compile the source.">
-    <mkdir dir="classes"/>
-    <!-- Compile the java code from source/ into classes/ -->
-    <javac destdir="classes" srcdir="source" debug="on" source="1.4" deprecation="on">
-      <exclude name="**/swt/**"/>
-    </javac>
-  </target>
-  
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     SWT: The Standard Widget Toolkit from eclipse.org
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <target name="swt" depends="init,compile"
-        description="Compile the SWT classes.">
-    <!-- Verify that SWT is available on the classpath -->
-    <available classname="org.eclipse.swt.SWT" property="swt.present"/>
-    <fail unless="swt.present" message="To run this task, add swt.jar to your CLASSPATH. SWT is available free at http://www.eclipse.org"/>
-    <!-- Compile the java code from source/ into classes/ -->
-    <javac destdir="classes" srcdir="source" debug="on" source="1.4">
-      <include name="**/swt/**"/>
-    </javac>
-  </target>
+	<target name="impldocs" depends="init">
+		<mkdir dir="docs"/>
+		<tstamp prefix="javadoc">
+			<format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
+		</tstamp>
+		<!-- document all the source -->
+		<javadoc
+			destdir="docs/impldocs" access="protected" author="true" use="true" windowtitle="Glazed Lists - Internal" source="1.4">
+			<packageset dir="source"/>
+			<packageset dir="test"/>
+			<doctitle><![CDATA[<h1>Glazed Lists - Developer Docs</h1>]]></doctitle>
+			<bottom><![CDATA[<a href="http://publicobject.com/glazedlists/" target="_top">Glazed Lists</a>, Copyright &#169; 2003-2004 O'Dell Engineering.<br>Generated ${javadoc.datestamp}]]></bottom>
+			<link href="http://java.sun.com/j2se/1.4.2/docs/api/"/>
+			<link href="http://www.eclipse.org/documentation/html/plugins/org.eclipse.platform.doc.isv/doc/reference/api/"/>
+		</javadoc>
+	</target>
 
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     REDISTRIBUTING THE SOURCE
-     Package the entire Glazed Lists source tree in a .zip file.
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   JAR
+	   Construct the .jar file for use in a library.
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-  <target name="dist" depends="init,clean"
-    description="Create a .zip file of the source for backup or distribution.">
-    <zip destfile="glazedlists-source.zip" basedir=".">
-     <exclude name="classes/**"/>
-     <exclude name="docs/**"/>
-     <exclude name="glazedlists-source.zip"/>
-     <exclude name="www/**"/>
-    </zip>
-  </target>
-
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     TEST
-     Compile unit tests and run them using JUnit.
-     This task depends on JUnit, available free at http://www.junit.org
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <target name="test" depends="init,compile"
-        description="Compile unit tests and run them using JUnit.">
-    <mkdir dir="classes"/>
-    <!-- Verify that JUnit is available on the classpath -->
-    <available classname="junit.framework.TestCase" property="junit.present"/>
-    <fail unless="junit.present" message="To run this task, install junit.jar and optional.jar into ${ant.home}/lib/ JUnit is available free at http://www.junit.org"/>
-    <!-- Compile the test classes from source/ into classes/ -->
-    <javac destdir="classes" srcdir="test" debug="on" source="1.4">
-      <classpath path="${ant.home}/lib/junit.jar"/>
-    </javac>
-    <!-- Execute JUnit tests -->
-    <junit printsummary="true" showoutput="false" fork="true"
-      errorProperty="test.failed" failureProperty="test.failed">
-      <assertions><enable/></assertions>
-      <classpath path="classes:${ant.home}/lib/junit.jar"/>
-      <formatter type="brief" usefile="false"/>
-      <batchtest>
-        <fileset dir="classes/" includes="**/**Test.class"/>
-      </batchtest>
-    </junit>
-    <fail message="Tests failed. Check test output." if="test.failed"/>
-  </target>
+	<target name="jar" depends="init,compile"
+		description="Creates glazedlists.jar file containing all UI libraries.">
+		<tstamp prefix="jar">
+			<format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
+		</tstamp>
+		<jar destfile="glazedlists.jar" update="true" index="true">
+			<fileset dir="classes"/>
+			<fileset dir=".">
+				<include name="resources/**"/>
+			</fileset>
+			<manifest>
+				<attribute name="Main-Class" value="ca.odell.glazedlists.demo.issuebrowser.swing.IssuesBrowser"/>
+				<attribute name="Sealed" value="true"/>
+				<attribute name="Built-By" value="${user.name}"/>
+				<attribute name="Implementation-Version" value="${jar.datestamp}"/>
+				<attribute name="Implementation-Title" value="Glazed Lists"/>
+				<attribute name="Implementation-URL" value="http://publicobject.com/glazedlists/"/>
+			</manifest>
+		</jar>
+	</target>
 
 
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-     PMD
-     Programming Mistake Detector, available free at http://pmd.sourceforge.net/
-   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-   
-  <target name="pmd">
-    <mkdir dir="docs"/>
-    <taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"/>
-    <pmd rulesetfiles="rulesets/strictexception.xml,rulesets/basic.xml,rulesets/design.xml,rulesets/imports.xml,rulesets/unusedcode.xml">
-      <formatter type="html" toFile="docs/pmd.html"/>
-        <fileset dir="source/">
-          <include name="**/*.java"/>
-      </fileset>
-    </pmd>
-  </target>
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   COMPILE
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
-  
+	<target name="compile" depends="init"
+		description="Compile the source.">
+		<mkdir dir="classes"/>
+		<!-- Compile the java code from source/ into classes/ -->
+		<javac destdir="classes" srcdir="source" debug="on" source="1.4" deprecation="on">
+			<exclude name="**/swt/**"/>
+		</javac>
+	</target>
+
+
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   SWT: The Standard Widget Toolkit from eclipse.org
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+	<target name="swt" depends="init,compile"
+		description="Compile the SWT classes.">
+		<!-- Verify that SWT is available on the classpath -->
+		<available classname="org.eclipse.swt.SWT" property="swt.present"/>
+		<fail unless="swt.present" message="To run this task, add swt.jar to your CLASSPATH. SWT is available free at http://www.eclipse.org"/>
+		<!-- Compile the java code from source/ into classes/ -->
+		<javac destdir="classes" srcdir="source" debug="on" source="1.4">
+			<include name="**/swt/**"/>
+		</javac>
+	</target>
+
+
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   REDISTRIBUTING THE SOURCE
+	   Package the entire Glazed Lists source tree in a .zip file.
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+	<target name="dist" depends="init,clean"
+		description="Create a .zip file of the source for backup or distribution.">
+		<zip destfile="glazedlists-source.zip" basedir=".">
+			<exclude name="classes/**"/>
+			<exclude name="docs/**"/>
+			<exclude name="glazedlists-source.zip"/>
+			<exclude name="www/**"/>
+		</zip>
+	</target>
+
+
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   TEST
+	   Compile unit tests and run them using JUnit.
+	   This task depends on JUnit, available free at http://www.junit.org
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+	<target name="test" depends="init,compile"
+		description="Compile unit tests and run them using JUnit.">
+		<mkdir dir="classes"/>
+		<!-- Verify that JUnit is available on the classpath -->
+		<available classname="junit.framework.TestCase" property="junit.present"/>
+		<fail unless="junit.present" message="To run this task, install junit.jar and optional.jar into ${ant.home}/lib/ JUnit is available free at http://www.junit.org"/>
+		<!-- Compile the test classes from source/ into classes/ -->
+		<javac destdir="classes" srcdir="test" debug="on" source="1.4">
+			<classpath path="${ant.home}/lib/junit.jar"/>
+		</javac>
+		<!-- Execute JUnit tests -->
+		<junit printsummary="true" showoutput="false" fork="true"
+			errorProperty="test.failed" failureProperty="test.failed">
+			<assertions>
+				<enable/>
+			</assertions>
+			<classpath path="classes:${ant.home}/lib/junit.jar"/>
+			<formatter type="brief" usefile="false"/>
+			<batchtest>
+				<fileset dir="classes/" includes="**/**Test.class"/>
+			</batchtest>
+		</junit>
+		<fail message="Tests failed. Check test output." if="test.failed"/>
+	</target>
+
+
+	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	   PMD
+	   Programming Mistake Detector, available free at http://pmd.sourceforge.net/
+	 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+	<target name="pmd">
+		<mkdir dir="docs"/>
+		<taskdef name="pmd" classname="net.sourceforge.pmd.ant.PMDTask"/>
+		<pmd rulesetfiles="rulesets/strictexception.xml,rulesets/basic.xml,rulesets/design.xml,rulesets/imports.xml,rulesets/unusedcode.xml">
+			<formatter type="html" toFile="docs/pmd.html"/>
+			<fileset dir="source/">
+				<include name="**/*.java"/>
+			</fileset>
+		</pmd>
+	</target>
+
+
 </project>
