Correct IssuesBrowser class name.
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@648 696c4f5c-992c-4387-df9e-f6c076136008

--- a/source/ca/odell/glazedlists/demo/demos.properties
+++ b/source/ca/odell/glazedlists/demo/demos.properties
@@ -1,10 +1,10 @@
 issuebrowser_swing=IssueBrowser (Swing)
-issuebrowser_swing.class=ca.odell.glazedlists.demo.issuebrowser.swing.IssueBrowser
-issuebrowser_swing.desc=Put some help text here
+issuebrowser_swing.class=ca.odell.glazedlists.demo.issuebrowser.swing.IssuesBrowser
+issuebrowser_swing.desc=Viewer for the current Glazed Lists issues.<br><br>Issues are loaded at startup from the main database and can be filtered and searched.
 
 issuebrowser_swt=IssueBrowser (SWT)
-issuebrowser_swt.class=ca.odell.glazedlists.demo.issuebrowser.swt.IssueBrowser
-issuebrowser_swt.desc=Put some help text here
+issuebrowser_swt.class=ca.odell.glazedlists.demo.issuebrowser.swt.IssuesBrowser
+issuebrowser_swt.desc=Viewer for the current Glazed Lists issues.<br><br>Issues are loaded at startup from the main database and can be filtered and searched.
 
 albumbrowser=AlbumBrowser
 albumbrowser.class=ca.odell.glazedlists.demo.collectionlist.AlbumBrowser
