Split GlazedLists factory into GlazedLists, GlazedListsSWT and GlazedListsSwing  ..  . . this leaves something to be desired but it is a must-have to compile SWT independently of Swing and vice-versa
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@699 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -164,7 +164,7 @@
 		</javac>
 	</target>
 
-	<target name="demo" depends="core,swing,swt">
+	<target name="demo" depends="core,swing">
 		<javac destdir="classes" srcdir="source" debug="on" source="1.4" deprecation="on">
 			<include name="**/demo/**"/>
 			<exclude name="**/swt/**"/>
