Updated code formatting Issue number: Obtained from: Submitted by: Reviewed by:
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@851 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,6 @@
 <!--
  ! Glazed Lists
- ! COPYRIGHT 2003 O'DELL ENGINEERING LTD.
- !
- ! see Apache Ant documentation: http://jakarta.apache.org/ant
+ ! Copyright 2003-2005 publicobject.com, O'Dell Engineering Ltd.
 -->
 
 <project name="glazedlists" default="jar" basedir=".">
