Issue number: Obtained from: Submitted by: Reviewed by: Created new build target for minimal Java 1.3 support. This is necessary for one of our big users and although it's a painful addition I've been convinced it's worthwhile. This change has required that I use Java 1.3 syntax and libraries for the following:  - ...glazedlists.event.*  - BasicEventList  - EventList  - ...glazedlists.util.concurrent.*  - ...glazedlists.impl.SubEventList  - ...glazedlists.impl.EventListIterator  - ...glazedlists.impl.SimpleIterator Java 1.3 syntax means replacing     assert(condition) with     if(!condition) throw new IllegalStateException();
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@905 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -171,6 +171,23 @@
 
 
 
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+       SPECIAL TARGETS
+     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+    <target name="java13" depends="init" description="Compile a limited subset of Glazed Lists for deployment on a J2SE 1.3">
+        <mkdir dir="classes"/>
+        <javac destdir="classes" srcdir="source" debug="on" source="1.3" target="1.3" deprecation="on">
+            <exclude name="*"/>
+            <include name="**/event/**"/>
+            <include name="**/BasicEventList.java"/>
+            <include name="**/EventList.java"/>
+            <include name="**/SubEventList.java"/>
+            <include name="**/EventListIterator.java"/>
+            <include name="**/SimpleIterator.java"/>
+            <include name="**/concurrent/**"/>
+        </javac>
+    </target>
 
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	   REDISTRIBUTING THE SOURCE
