Issue number: Obtained from: Submitted by: Reviewed by: latest for Java 1.3 build
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@907 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -178,7 +178,6 @@
     <target name="java13" depends="init" description="Compile a limited subset of Glazed Lists for deployment on a J2SE 1.3">
         <mkdir dir="classes"/>
         <javac destdir="classes" srcdir="source" debug="on" source="1.3" target="1.3" deprecation="on">
-            <exclude name="*"/>
             <include name="**/event/**"/>
             <include name="**/BasicEventList.java"/>
             <include name="**/EventList.java"/>
@@ -187,7 +186,22 @@
             <include name="**/SimpleIterator.java"/>
             <include name="**/concurrent/**"/>
         </javac>
+        <tstamp prefix="jar">
+            <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
+        </tstamp>
+        <jar destfile="glazedlists_13.jar" update="true" index="true">
+            <fileset dir="classes"/>
+            <manifest>
+                <attribute name="Sealed" value="true"/>
+                <attribute name="Built-By" value="${user.name}"/>
+                <attribute name="Implementation-Version" value="${jar.datestamp}"/>
+                <attribute name="Implementation-Title" value="Glazed Lists for Java 1.3"/>
+                <attribute name="Implementation-URL" value="http://publicobject.com/glazedlists/"/>
+            </manifest>
+        </jar>
     </target>
+
+
 
 	<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 	   REDISTRIBUTING THE SOURCE
