Issue number: Obtained from: Submitted by: Reviewed by: changed java_13 build name
git-svn-id: https://svn.java.net/svn/glazedlists~svn/trunk@974 696c4f5c-992c-4387-df9e-f6c076136008

--- a/build.xml
+++ b/build.xml
@@ -189,7 +189,7 @@
         <tstamp prefix="jar">
             <format property="datestamp" pattern="yyyy-MM-dd H:mm"/>
         </tstamp>
-        <jar destfile="glazedlists_13.jar" update="true" index="true">
+        <jar destfile="glazedlists_java13.jar" update="true" index="true">
             <fileset dir="classes"/>
             <manifest>
                 <attribute name="Sealed" value="true"/>
